--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "sequelize-auto": "^0.8.8",
     "tailwindcss": "^3.2.1"
   },
   "dependencies": {
