--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./tailwind.scss -o ./public/css/index.css --minify --watch --postcss",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "start": "node server.js"
   },
   "repository": {
@@ -14,7 +12,7 @@
     "url": "git+https://github.com/fullstackneo/i_will.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Neo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fullstackneo/i_will/issues"
