--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@faker-js/faker": "^7.6.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.12",
     "dotenv": "^16.0.3",
     "eslint": "^8.26.0",
@@ -43,6 +45,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3"
   }
